# physx-odin

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  README.md  build.rs  functions.odin  justfile  physx_api.odin  physx_generated.odin  test.odin  types_linux.odin  types_windows.odin
.github/workflows/: main.yml  release.yml
codegen/: Cargo.toml  LICENSE-MIT  build.rs  structgen.cpp  structgen.hpp  structgen_out.hpp  structgen_out.json
codegen/pxbind/: type-db.json
codegen/pxbind/src/: consumer.rs  cpp.rs  dump.rs  generator.rs  lib.rs  main.rs  odin_generator.rs  structgen.rs  type_db.rs
codegen/pxbind/src/consumer/: functions.rs  record.rs
codegen/pxbind/src/generator/: comment.rs  enums.rs  functions.rs  record.rs
codegen/pxbind/src/odin_generator/: comment.rs  enums.rs  functions.rs  record.rs
codegen/sources/: common
codegen/src/: main.rs  physx_api.cpp
examples/: ball.odin  ball_raylib.odin  joint_cubes.odin
foo/: build.sh  iter.sh  main.odin  physx_generated.h  physx_generated.hpp  physx_generated.odin  physx_generated_enums.h  structgen.cpp  structgen.hpp  structgen_out.h  structgen_out.hpp
pxbind/: Cargo.toml
pxbind/src/: .#main.rs  cgenerator.rs  consumer.rs  lib.rs  main.rs  odin_generator.rs
pxbind/src/cgenerator/: record.rs
pxbind/src/consumer/: enums.rs  record.rs
pxbind/src/generator/: functions.rs  record.rs
samples/: joint_cubes.odin  ui.odin
src/: physx_generated.c  physx_generated.h
src/structgen/: structgen.hpp
tests/: layout_linux.odin  layout_windows.odin  physx_generated.odin
(+4 files in other folders)
