
[workspace]
resolver = "2"
members = ["pxbind"]

[profile.dev.package.pxbind]
opt-level = 1               # Use slightly better optimizations.
overflow-checks = false     # Disable integer overflow checks.

[package]
name = "physx-odin"
description = "Odin bindings for NVIDIA PhysX C++ SDK"
version = "0.1.0"
publish = false
authors = [
    "Tom Solberg <me@sbg.dev>",
]
license = "(MIT OR Apache-2.0) AND BSD-3-Clause"
repository = "https://github.com/tgolsson/physx-odin"
edition = "2021"


[features]
# This feature will build and run the structgen program, generating C++ and Rust
# code to ensure the record types used in FFI match exactly and can be transparently
# memcopied. This feature is not normally needed for tier 1 platforms and Android
# as the crate includes pre-generated ones
structgen = []
profile = []
# Enables `Debug` derivations for the FFI structures, which can be useful for
# print debugging
debug-structs = []
# Enables warnings in when compiling the C++ code. This is not something you should care about
cpp-warnings = []

[dependencies]
anyhow = "1"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
